# brokerage-db-rs

./: .gitignore  Cargo.toml  README.md
src/: account.rs  db_connection.rs  db_connection_factory.rs  db_util.rs  eod_summary.rs  lib.rs  security.rs  trade_execution.rs
src/dynamo/: account.rs  mod.rs
src/dynamo/migrations/: mod.rs  runner.rs  v001_add_brokerage_account.rs
src/migrations/: mod.rs  v001_add_accounts.rs  v002_add_security.rs  v003_add_trade_executions.rs  v004_add_eod_summary.rs
src/mongo/: account.rs  mod.rs
src/mongo/migrations/: v001_add_accounts.rs  v002_add_security.rs  v003_add_trade_executions.rs
tests/: dynamodb_tests.rs  mongodb_tests.rs  tests.rs
tests/common/: mod.rs
