[package]
name = "brokerage-db"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Database management for trader brokerage data with a MongoDB backend."

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bson = "2.14.0"
mongodb = "3.2.3"
tfiala-mongodb-migrator = "0.2.4"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["mongo"] }
version-sync = "0.9.5"
