[package]
name = "brokerage-db"
version = "0.2.5"
edition = "2024"
license = "MIT"
description = "Database management for trader brokerage data with a MongoDB backend."
repository = "https://github.com/tfiala/brokerage-db-rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bson = "2.14.0"
futures = "0.3.31"
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
tfiala-mongodb-migrator = "0.2.4"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rstest = "0.25.0"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["mongo"] }
tracing-test = "0.2.5"
version-sync = "0.9.5"
